<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>scitos_mira</name>
	<version>1.1.1</version>
	<description>A package contaning drivers for Metralabs Scitos robot base (HG4 version) using the MIRA framework.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<license>GPL</license>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>nav2_util</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>scitos_msgs</depend>
	<depend>visualization_msgs</depend>
	<exec_depend>ros2launch</exec_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
