# Test for is bumper activated condition
ament_add_gtest(test_scitos2_condition_is_bumper_activated
  test_is_bumper_activated_condition.cpp
)
ament_target_dependencies(test_scitos2_condition_is_bumper_activated
  ${dependencies}
)
target_link_libraries(test_scitos2_condition_is_bumper_activated
  scitos2_is_bumper_activated_condition_bt_node
)